Update header so it's not being clipped by the fixed navigation bar

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,5 +1,6 @@
 .profile {
   height: 400px;
+  margin-top: 120px;
   background-image:url('../images/az-subtle.png');
   background-color: gold;
   display: flex;
@@ -7,3 +8,4 @@
   justify-content: center;
   align-items: center;
 }
+
